Adding support api tests, user post endpoint and basic react app with routing

--- a/smsgw/static/index.html
+++ b/smsgw/static/index.html
@@ -5,7 +5,10 @@
 </head>
 <body>
     <div id="smsgw"></div>
-    <script src="js/bundle.js"></script>
+
+
+    <script type="text/javascript" src="js/bundle.js"></script>
+    
 </body>
 </html>
 <body>
